--- a/app/src/main/res/layout/maintain_assignment_new_assignment.xml
+++ b/app/src/main/res/layout/maintain_assignment_new_assignment.xml
@@ -7,7 +7,7 @@
     android:layout_marginRight="15dp"
     android:layout_marginTop="15dp"
     android:orientation="vertical"
-    tools:context="com.a2pt.whatsnext.NewAssignmentFragment">
+    tools:context="com.a2pt.whatsnext.fragments.NewAssignmentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
